--- a/app/views/shared/_menu.haml
+++ b/app/views/shared/_menu.haml
@@ -7,13 +7,13 @@
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
-      %a.navbar-brand{href: '#'} Plant Predictor
+      %a.navbar-brand{href: root_path} Plant Predictor
     / Collect the nav links, forms, and other content for toggling
     #bs-example-navbar-collapse-1.collapse.navbar-collapse
       %ul.nav.navbar-nav
-        %li
-          %a{'aria-expanded': 'false', 'aria-haspopup': 'true', 'data-toggle': 'dropdown', href: '#', role: 'button'}
+        %li{class: active_simulation}
+          %a{'aria-expanded': 'false', 'aria-haspopup': 'true', href: simulation_predictions_path, role: 'button'}
             Simulation
-        %li
-          %a{'aria-expanded': 'false', 'aria-haspopup': 'true', 'data-toggle': 'dropdown', href: '#', role: 'button'}
+        %li{class: active_live_prediction}
+          %a{'aria-expanded': 'false', 'aria-haspopup': 'true', href: live_prediction_predictions_path, role: 'button'}
             Live Prediction
