--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,11 +9,31 @@
 
 .carousel-inner > .item > img,
 .carousel-inner > .item > a > img {
-    width: 100%;
-    margin: auto;
-    max-height: 30%;
+  width: 100%;
+  margin: auto;
+  max-height: 500px;
 }
 
 .carousel-control {
   width: 10%;
+}
+
+.slider-container {
+  max-height: 500px;
+}
+
+.navbar-default {
+  margin-bottom: 0;
+}
+
+footer {
+  background-color: #f2f2f2;
+  padding: 25px;
+}
+
+/* Hide the carousel text when the screen is less than 600 pixels wide */
+@media (max-width: 600px) {
+  .carousel-caption {
+    display: none;
+  }
 }
