--- a/app/views/shared/_menu.haml
+++ b/app/views/shared/_menu.haml
@@ -1,19 +1,6 @@
-%nav.navbar.navbar-default
-  .container-fluid
-    / Brand and toggle get grouped for better mobile display
-    .navbar-header
-      %button.navbar-toggle.collapsed{'aria-expanded': 'false', 'data-target': '#bs-example-navbar-collapse-1', 'data-toggle': 'collapse', type: 'button'}
-        %span.sr-only Toggle navigation
-        %span.icon-bar
-        %span.icon-bar
-        %span.icon-bar
-      %a.navbar-brand{href: root_path} Plant Predictor
-    / Collect the nav links, forms, and other content for toggling
-    #bs-example-navbar-collapse-1.collapse.navbar-collapse
-      %ul.nav.navbar-nav
-        %li{class: active_simulation}
-          %a{'aria-expanded': 'false', 'aria-haspopup': 'true', href: simulation_predictions_path, role: 'button'}
-            Simulation
-        %li{class: active_live_prediction}
-          %a{'aria-expanded': 'false', 'aria-haspopup': 'true', href: live_prediction_predictions_path, role: 'button'}
-            Live Prediction
+= react_component 'ReactMainMenu',
+    homepage_link: root_path,
+    simulation_style: active_simulation,
+    simulation_link: simulation_predictions_path,
+    live_prediction_style: active_live_prediction,
+    live_prediction_link: live_prediction_predictions_path
