--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,12 +18,9 @@
   width: 10%;
 }
 
-.slider-container {
-  max-height: 500px;
-}
-
 .navbar-default {
   margin-bottom: 0;
+  border-radius: 0;
 }
 
 footer {
@@ -36,4 +33,23 @@ footer {
   .carousel-caption {
     display: none;
   }
+}
+
+.sidenav {
+  padding-top: 20px;
+  background-color: #f1f1f1;
+  height: 100%;
+}
+
+.row.content {
+  height: inherit;
+  margin: auto;
+}
+
+@media screen and (max-width: 767px) {
+  .sidenav {
+    height: auto;
+    padding: 15px;
+  }
+  .row.content {height:auto;}
 }
