--- a/app/views/predictions/simulation.haml
+++ b/app/views/predictions/simulation.haml
@@ -1,3 +1,5 @@
 = render 'shared/menu'
 = react_component 'ReactSimulation',
-    title: @title
+    cube_path: asset_path('cube.png'),
+    sensor_images: sensor_paths,
+    predictions: []
