Functioning version of simulation - create + destroy

--- a/app/views/predictions/simulation.haml
+++ b/app/views/predictions/simulation.haml
@@ -2,4 +2,6 @@
 = react_component 'ReactSimulation',
     cube_path: asset_path('cube.png'),
     sensor_images: sensor_paths,
-    predictions: []
+    predictions: @predictions,
+    access_id: @id,
+    sensor_values: sensor_constant_values
