--- a/app/views/predictions/simulation.haml
+++ b/app/views/predictions/simulation.haml
@@ -1,7 +1,8 @@
 = render 'shared/menu'
 = react_component 'ReactSimulation',
-    cube_path: asset_path('cube.png'),
-    sensor_images: sensor_paths,
+    background_path: asset_path('cube.png'),
+    components_images: components_paths,
+    components_informations: components_descriptions,
     predictions: @predictions,
     access_id: @id,
     sensor_values: sensor_constant_values
