React Live prediction view, extracted large components, refactored some parts of React views

--- a/app/views/predictions/live_prediction.haml
+++ b/app/views/predictions/live_prediction.haml
@@ -1,4 +1,6 @@
 = render 'shared/menu'
 = react_component 'ReactLivePrediction',
-    title: @title
-
+    access_page: 'http://127.0.0.1/',
+    predictions: @predictions,
+    access_id: @id,
+    sensor_values: sensor_constant_values
