--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -58,3 +58,12 @@ footer {
 .margin-top-20{
   margin-top: 20px;
 }
+
+.col-lg-1{
+  width: 5%;
+  margin-top: 5px;
+}
+
+.col-lg-2{
+  width: 15.5%;
+}
