Added new page for component informations

--- a/app/views/shared/_menu.haml
+++ b/app/views/shared/_menu.haml
@@ -3,4 +3,6 @@
     simulation_style: active_simulation,
     simulation_link: simulation_predictions_path,
     live_prediction_style: active_live_prediction,
-    live_prediction_link: live_prediction_predictions_path
+    live_prediction_link: live_prediction_predictions_path,
+    information_style: active_information,
+    information_link: component_information_path
