--- a/app/assets/stylesheets/rig-component.scss
+++ b/app/assets/stylesheets/rig-component.scss
@@ -32,12 +32,25 @@
     width: 100%;
     height: auto;
     border:none;
-    transform:scale(1);
+    transform:scale(0.5);
     transition:all 1s;
+    background-color: #bababa;
+}
+
+.rig-img-back {
+    position: absolute;
+    display:block;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin: auto;
+    background: #bababa;
+    background-size:50px 50px;
 }
 
 #rig li:hover .rig-img {
-    transform:scale(1.05);
+    transform:scale(0.75);
 }
 
 /* If have the overlay layer */
