Removed IFrame from React components and parsed JSON files to show correct content

--- a/app/views/predictions/simulation.haml
+++ b/app/views/predictions/simulation.haml
@@ -3,4 +3,4 @@
     predictions: @predictions,
     access_id: @id,
     sensor_values: sensor_constant_values,
-    src: simulation_hypotheses_path
+    src: json_read(simulation_hypotheses_path)
