--- a/app/views/predictions/live_prediction.haml
+++ b/app/views/predictions/live_prediction.haml
@@ -1,7 +1,7 @@
 = render 'shared/menu'
 = react_component 'ReactLivePrediction',
-    src_readings: sensor_readings_path,
-    src_hypotheses: live_hypotheses_path,
+    src_readings: json_read(sensor_readings_path),
+    src_hypotheses: json_read(live_hypotheses_path),
     predictions: @predictions,
     access_id: @id,
     sensor_values: sensor_constant_values
