Added plant selection option with load and unload on data

--- a/app/views/predictions/live_prediction.haml
+++ b/app/views/predictions/live_prediction.haml
@@ -4,4 +4,5 @@
     src_hypotheses: json_read(live_hypotheses_path),
     predictions: @predictions,
     access_id: @id,
-    sensor_values: sensor_constant_values
+    sensor_values: sensor_constant_values,
+    available_plants: available_plants
