--- a/app/views/predictions/simulation.haml
+++ b/app/views/predictions/simulation.haml
@@ -3,4 +3,5 @@
     predictions: @predictions,
     access_id: @id,
     sensor_values: sensor_constant_values,
+    available_plants: available_plants,
     src_simulation: json_read(simulation_hypotheses_path)
