Made timer on Live React component to update on changes on json file

--- a/app/views/predictions/live_prediction.haml
+++ b/app/views/predictions/live_prediction.haml
@@ -5,4 +5,5 @@
     predictions: @predictions,
     access_id: @id,
     sensor_values: sensor_constant_values,
-    available_plants: available_plants
+    available_plants: available_plants,
+    reload_time: 10000
