Added links to datasheets

--- a/app/views/predictions/component_information.haml
+++ b/app/views/predictions/component_information.haml
@@ -3,4 +3,5 @@
     background_path: asset_path('cube.png'),
     components_images: components_paths,
     components_icons: icons_paths,
-    components_informations: components_descriptions
+    components_informations: components_descriptions,
+    component_sources: components_datasheets
