Added electrical schemas to sensor components

--- a/app/views/predictions/component_information.haml
+++ b/app/views/predictions/component_information.haml
@@ -1,6 +1,6 @@
 = render 'shared/menu'
 = react_component 'ReactComponentInformation',
-    background_path: asset_path('cube.png'),
+    components_electrical_schema: electrical_schemas,
     components_images: components_paths,
     components_icons: icons_paths,
     components_informations: components_descriptions,
