Refactor on prediction model hash and homepage css

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -90,3 +90,22 @@ footer {
   padding-right: 40px;
   margin-left: 20px;
 }
+
+.technology-image {
+  width: auto;
+  height: 250px;
+  margin: 0px auto;
+  display: block;
+}
+
+.technology-container {
+  margin-bottom: 100px;
+}
+
+.footer-styling {
+  position: fixed;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  padding: 1rem;
+}
